# adaptive-agent

./: .gitignore  OPTIMIZATION_PLAN.md  README.md  config.example.yaml  pyproject.toml
docs/decisions/: 001-context-compaction.md  002-defense-in-depth.md  003-unified-code-generation.md  004-native-tools-default.md  005-core-split.md
eval/: __main__.py  harness.py  metrics.py  report.py  runner.py  scenario.py  verifiers.py
eval/fixtures/: .train_vocab.txt  access_logs.csv  app_logs.ndjson  books.json  buggy_divzero.py  buggy_none_guard.py  buggy_off_by_one.py  buggy_stats_v2.py  buggy_tool.py  buggy_type_error.py  carriers.json  employees.csv  empty_data.csv  geo_cities.csv  geo_distances.json  incidents.json  inventory.json  library_catalog.json  library_loans.csv  monsters.json  nested_orders.json  orders.csv  patients.csv  payroll.json  raw_logs.csv  sales_data.csv  sample_page.html  sample_text.txt  sensor_meta.json  sensor_readings.csv  server_metrics.csv  shipments.csv  support_tickets.csv  temperature.csv  ticket_events.json  unicode_data.json  users.json  vitals.json  weather_readings.ndjson  weather_stations.csv
eval/scenarios/: 01_csv_analysis.yaml  02_deprecated_scan.yaml  04_json_to_sqlite.yaml  05_tool_repair.yaml  11_greeting.yaml  (+46 more)
tests/: test_agent.py  test_builder.py  test_builtin.py  test_client.py  test_code_extractor.py  test_compaction.py  test_cross_session.py  test_eval_runner.py  test_events.py  test_json_parser.py  test_persistence.py  test_planner.py  test_prompts.py  test_registry.py  test_repair_e2e.py  test_runner.py  test_validator.py
(+34 files in other folders)
