[project]
name = "adaptive-agent"
version = "0.1.0"
description = "Adaptive AI Agent that dynamically creates, executes, and persists tools"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "json-repair>=0.30",
    "pydantic>=2.0",
]

[project.scripts]
adaptive-agent = "adaptive_agent.main:main"
adaptive-agent-eval = "eval.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.400",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_agent", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["eval/fixtures", ".venv"]
extraPaths = ["src", "."]

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportArgumentType = false
reportAttributeAccessIssue = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
